--- a/prediction/templates/prediction/history.html
+++ b/prediction/templates/prediction/history.html
@@ -122,8 +122,8 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <a href="/api/predict-form/" class="nav-link">Prediction Form</a>
-            <a href="/api/history/" class="nav-link">History</a>
+            <a href="/predict-form/" class="nav-link">Prediction Form</a>
+            <a href="/history/" class="nav-link">History</a>
         </div>
     </nav>
     <div class="container">
